Initial commit: 프로젝트 오류 수정

--- a/data_generator_ver1/index.html
+++ b/data_generator_ver1/index.html
@@ -102,7 +102,7 @@
                 </div>
                 
                 <button id="updateVizBtn" class="btn-primary">시각화 업데이트</button>
-                <span id="pointCount" class="info-text"></span>
+                <span id="displayedCount" class="info-text"></span>
             </div>
             
             <div class="chart-container">
