Add slider control for window start and auto-update

--- a/data_generator_ver1/index.html
+++ b/data_generator_ver1/index.html
@@ -88,10 +88,12 @@
                             <input type="number" id="windowSize" value="50" min="10" max="200">
                         </div>
                         
-                        <div class="control-group window-nav">
-                            <button id="windowLeft" class="btn-secondary">◀</button>
+                        <div class="control-group">
+                            <label for="windowStart">윈도우 시작 위치:</label>
+                            <input type="range" id="windowStart" value="0" min="0" max="100" step="1">
+                        </div>
+                        <div class="control-group">
                             <span id="windowRange">범위: -</span>
-                            <button id="windowRight" class="btn-secondary">▶</button>
                         </div>
                     </div>
                 </div>
